# aicpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mm  scratch  watch
lib/googletest-release-1.8.0/googletest/samples/: sample1.cc
src/: CMakeLists.txt  object.h
src/agent/: action.cpp  action.h  agent.cpp  agent.h  dynamic_object.cpp  dynamic_object.h  percept.h  reflex_agent.h  simple_action_tracker.h  test_action.h  vacuum_agent.h
src/agent/agent_programs/: agent_program.cpp  agent_program.h  agent_program2.cpp  agent_program2.h  model_based_reflex.h  table_driven.cpp  table_driven.h  table_driven_agent_program.cpp
src/agent/agent_programs/simple_rule/: condition.h  condition.h.bak  rule.h  rule.h.bak
src/environment/: environment.cpp  environment.h  environment_object.h  environment_view.h  environment_view.h.bak  wall.cpp  wall.h  world.cpp  world.h
src/environment/vacuum/: reflex_vacuum_agent.h  vacuum_environment.h
src/environment/xyenv/: xy_environment.cpp  xy_environment.h  xy_environment_state.cpp  xy_environment_state.h
src/util/algorithm/: utils.h
src/util/datastructure/: table.h  vector.h  xy_location.cpp  xy_location.h
src/util/types/: attribute.h
test/: base_attribute_test.cpp  base_object_test.cpp  percept_sequence_test.cpp  percept_test.cpp  reflex_vacuum_agent_test.cpp  simple_rule_test.cpp  table_test.cpp  tabledriven_agent_program_test.cpp  vacuum_environment_test.cpp  xy_environment_test.cpp
tests/unit_tests/: CMakeLists.txt  base_attribute_test.cpp  percept_test.cpp  reflex_vacuum_agent_test.cpp  tabledriven_agent_program_test.cpp  vacuum_environment_test.cpp
